--- a/aws-py-static-website/Pulumi.yaml
+++ b/aws-py-static-website/Pulumi.yaml
@@ -8,10 +8,17 @@ template:
   config:
     aws:region:
       description: The AWS region to deploy into
-      default: us-west-2
-    static-website:targetDomain:
-      description: The domain to serve the website at (e.g. www.example.com)
-    static-website:pathToWebsiteContents:
+      default: us-west-1
+    aws-py-static-website:bucket_name:
+      description: The bucket base name
+    aws-py-static-website:slug:
       description: Relative path to the website's contents (e.g. the `./www` folder)
-    static-website:certificateArn:
-      description: (Optional) ACM certificate ARN for the target domain; must be in the us-east-1 region. If omitted, a certificate will be created.
+    aws-py-static-website:environment:
+      description: dev or prod
+    aws-py-static-website:tags:
+      description: Descriptive tags
+      default:
+        client: wow
+        project: residential-snowplow-schema-repo
+        snowplow: true
+        environment: dev
