--- a/aws-py-static-website/Pulumi.wow-residential.yaml
+++ b/aws-py-static-website/Pulumi.wow-residential.yaml
@@ -1,7 +1,7 @@
 config:
   aws:region: us-west-1
-  aws-py-static-website:bucket_name: wow.schemas
-  aws-py-static-website:slug: wow.schemas
+  aws-py-static-website:bucket_name: wow.residential.schemas
+  aws-py-static-website:slug: wow.residential.schemas
   aws-py-static-website:environment: prod
   aws-py-static-website:tags:
     client: wow
